--- a/styles/layout/footer.css
+++ b/styles/layout/footer.css
@@ -1,105 +1,119 @@
 @charset "UTF-8";
 /* footer styles */
 footer {
-  grid-area: footer;
-  padding: 3rem 0;
-  width: 100%;
-  color: white;
-  background-color: dimgray;
-  border-radius: 2rem 2rem 0 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+	grid-area: footer;
+	padding: 3rem 0;
+	width: 100%;
+	color: white;
+	background-color: dimgray;
+	border-radius: 2rem 2rem 0 0;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 }
 
 div#footer__copy {
-  flex: 1 1 0;
-  flex-grow: 1;
-  padding: 0 2rem 0 2rem;
-  font-size: 1.2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	flex: 1 1 0;
+	flex-grow: 1;
+	padding: 0 2rem 0 2rem;
+	font-size: 1.2rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 div#footer__nav__contents {
-  flex: 1 1 0;
-  flex-grow: 1;
-  padding: 0 2rem 0 2rem;
-  height: 100%;
-  border-left: 1px solid white;
-  display: flex;
-  flex-direction: column;
+	flex: 1 1 0;
+	flex-grow: 1;
+	padding: 0 2rem 0 2rem;
+	height: 100%;
+	border-left: 1px solid white;
+	display: flex;
+	flex-direction: column;
 }
 
 div#footer__nav__links {
-  padding: 0 2rem 0 2rem;
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  align-self: center;
+	padding: 0 2rem 0 2rem;
+	height: 100%;
+	display: flex;
+	flex-direction: row;
+	align-self: center;
 }
 
 footer a {
-  padding: 0.5rem;
-  margin: 0.5rem;
-  width: 80%;
-  border: 1px solid white;
-  border-radius: 2rem;
-  height: 2.5rem;
-  align-self: center;
-  text-align: center;
-  text-decoration: none;
-} 
+	padding: 0.5rem;
+	margin: 0.5rem;
+	width: 80%;
+	border: 1px solid white;
+	border-radius: 2rem;
+	height: 2.5rem;
+	align-self: center;
+	text-align: center;
+	text-decoration: none;
+	transition: 0.5s;
+}
 footer a:hover {
-  border-radius: 2rem;
-  color: dimgray;
-  background-color: white;
-  font-weight: bold;
+	border-radius: 2rem;
+	color: dimgray;
+	background-color: white;
+	font-weight: bold;
+}
+footer a.logo {
+	border: 0;
+	padding: 0;
+	width: auto;
+	color: inherit;
+}
+footer a.logo:hover {
+	border: 0;
+	color: inherit;
+	background-color: inherit;
+	font-weight: inherit;
 }
 
 /* Tablet Contents Style */
-@media screen and (max-width:1280px) {
-  div#footer__copy img[src$=".svg"] {
-    transform: scale(0.8);
-  }
-  footer a:hover {
-    border-radius: 2rem;
-    color: inherit;
-    background-color: inherit;
-    font-weight: inherit;
-  }
+@media screen and (max-width: 1280px) {
+	div#footer__copy img[src$='.svg'] {
+		transform: scale(0.8);
+	}
+	footer a:hover {
+		border-radius: 2rem;
+		color: inherit;
+		background-color: inherit;
+		font-weight: inherit;
+	}
 }
 
 /* SmartPhone Image styles */
-@media screen and (max-width:500px) {
-  footer {
-    flex-direction: column;
-  }
-  footer a:hover {
-    border-radius: 2rem;
-    color: inherit;
-    background-color: inherit;
-    font-weight: inherit;
-  }
+@media screen and (max-width: 500px) {
+	footer {
+		flex-direction: column;
+	}
+	footer a:hover {
+		border-radius: 2rem;
+		color: inherit;
+		background-color: inherit;
+		font-weight: inherit;
+	}
 
-  div#footer__copy {
-    margin-bottom: 1rem;
-  }
+	div#footer__copy {
+		margin-bottom: 1rem;
+	}
 
-  div#footer__nav__contents, div#footer__nav__links {
-    border-left: 0;
-  }
-  div#footer__nav__links {
-    width: 100%;
-  }
-  div#footer__nav__links a {
-    margin: 1rem 0.5rem 0 0.5rem;
-    border: 0;
-    transform: scale(1.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+	div#footer__nav__contents,
+	div#footer__nav__links {
+		border-left: 0;
+	}
+	div#footer__nav__links {
+		width: 100%;
+	}
+	div#footer__nav__links a {
+		margin: 1rem 0.5rem 0 0.5rem;
+		border: 0;
+		transform: scale(1.8);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
 }
