--- a/styles/components/card.css
+++ b/styles/components/card.css
@@ -31,3 +31,15 @@ li.card:hover {
 	transform: scale(1.05);
 	transition: all 0.5s ease-out 0.1s;
 }
+
+/* Tablet Contents Style */
+@media screen and (max-width: 1280px) {
+}
+
+/* SmartPhone Image styles */
+@media screen and (max-width: 500px) {
+	li.card {
+		width: 15rem;
+		min-width: 15rem;
+	}
+}
