--- a/styles/components/card.css
+++ b/styles/components/card.css
@@ -20,12 +20,9 @@ li.card {
 	height: 20rem;
 	border-radius: 1rem;
 	border: 1px solid dimgray;
-	font-size: 1.5rem;
+	text-align: center;
+	font-size: 3rem;
 	font-weight: bold;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
 }
 li.card:hover {
 	transform: scale(1.05);
